fix: hide image overflow from header banner template part in header-banner.css

--- a/assets/css/components/header-banner.css
+++ b/assets/css/components/header-banner.css
@@ -5,6 +5,7 @@
   height: fit-content;
   position: relative;
   padding: 3.25rem 0;
+  overflow: hidden;
 }
 
 .ecs-header-banner-has-img::before {
